--- a/mysite02/pom.xml
+++ b/mysite02/pom.xml
@@ -22,7 +22,12 @@
     	<artifactId>mariadb-java-client</artifactId>
     	<version>2.7.5</version>
 		</dependency>
-		
+		<!-- JSTL -->
+		<dependency>
+    	<groupId>jstl</groupId>
+    	<artifactId>jstl</artifactId>
+    	<version>1.2</version>
+		</dependency>
 		<!-- servlet-->
 		<dependency>
     	<groupId>javax.servlet</groupId>
