--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,10 @@
     	<servlet-name>GuestbookController</servlet-name>
     	<servlet-class>com.douzone.mysite.controller.GuestbookController</servlet-class>
   </servlet>
+  <servlet>
+    	<servlet-name>BoardController</servlet-name>
+    	<servlet-class>com.douzone.mysite.controller.BoardController</servlet-class>
+  </servlet>
   <servlet-mapping>
     	<servlet-name>MainController</servlet-name>
     	<url-pattern></url-pattern>
@@ -54,6 +58,10 @@
   <servlet-mapping>
     	<servlet-name>GuestbookController</servlet-name>
     	<url-pattern>/guestbook</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    	<servlet-name>BoardController</servlet-name>
+    	<url-pattern>/board</url-pattern>
   </servlet-mapping>
   
   <!--  공통 Error Page -->
