--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -38,6 +38,19 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- MyBatis Core -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.5.9</version>
+		</dependency>
+		<!-- MyBatis Spring -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>2.0.7</version>
+		</dependency>
+		
 		<!-- Common DBCP -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
