--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -22,6 +22,12 @@
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-context</artifactId>
     	<version>${org.springframework-version}</version>
+    	<exclusions>
+					<exclusion>
+	    				<groupId>commons-logging</groupId>
+	   					<artifactId>commons-logging</artifactId>
+					</exclusion>
+    	</exclusions>	
 		</dependency>
 		
 		<!-- Spring MVC -->
@@ -70,6 +76,18 @@
     	<groupId>jstl</groupId>
     	<artifactId>jstl</artifactId>
     	<version>1.2</version>
+		</dependency>
+		
+		<!-- Slf4j(logback) -->
+		<dependency>                                    
+  			<groupId>org.slf4j</groupId>                
+   			<artifactId>jcl-over-slf4j</artifactId>     
+  			<version>1.7.36</version>  
+		</dependency>	
+		<dependency>
+    		<groupId>ch.qos.logback</groupId>
+    		<artifactId>logback-classic</artifactId>
+    		<version>1.2.11</version>
 		</dependency>
 		
 		<!-- Servlet -->
