--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -90,6 +90,18 @@
     		<version>1.2.11</version>
 		</dependency>
 		
+		<!-- common Fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		
 		<!-- Servlet -->
 		<dependency>
     	<groupId>javax.servlet</groupId>
