--- a/mysite06/pom.xml
+++ b/mysite06/pom.xml
@@ -22,17 +22,43 @@
 		</properties>
 	 
 		<dependencies>
-			<!-- Spring Boot Basic Starter -->
+
+			<!-- Spring Boot Dev Tools: Live Reload -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-	
+				<artifactId>spring-boot-devtools</artifactId>
+			</dependency>		
+		
 			<!-- Spring Boot Web Starter -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
 			</dependency>
+
+			<!-- Spring Boot AOP Starter -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-aop</artifactId>
+			</dependency>
+			
+			<!-- Spring Boot Validation Starter -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-validation</artifactId>
+			</dependency>			
+
+			<!-- MyBatis Starter -->
+			<dependency>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>2.2.2</version>
+			</dependency>		
+
+		<!-- MariaDB JDBC Driver-->
+  	<dependency>
+    	<groupId>org.mariadb.jdbc</groupId>
+    	<artifactId>mariadb-java-client</artifactId>
+		</dependency>	
 	
 			<!-- JSTL -->
 			<dependency>
