--- a/mysite06/src/main/resources/application.yml
+++ b/mysite06/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
    profiles:
       active: dev
       
+   # 전역변수   
+   application:
+      name: mysite
+         
    # devtools - live reload
    devtools:
       livereload:
@@ -19,7 +23,7 @@ spring:
          suffix: .jsp
    web:
       resources:
-         static-locations: file:/mysite-uploads/, classpath:/static/
+         static-locations: classpath:/static/, file:/mysite-uploads/
 
    # message resource(i18n)
    messages:
@@ -98,4 +102,18 @@ server:
 ---
 # logging configuration
 logging:
-   config: classpath:logback.xml
+   pattern:
+      file: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{5} - %msg%n"
+   logback:
+      rollingpolicy:
+         file-name-pattern: "/${spring.application.name}-logs/exception.%d{yyyy-MM-dd}.%i.log.zip"
+         max-file-size: 200MB
+         max-history: 10
+   file:
+      name: "/${spring.application.name}-logs/exception.log"
+   level:
+      root: INFO
+      com:
+         douzone:
+            mysite:
+               exception: ERROR
