--- a/mysite06/pom.xml
+++ b/mysite06/pom.xml
@@ -107,6 +107,17 @@
 							<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
 				</plugin>
+				<plugin>
+				    <groupId>org.codehaus.mojo</groupId>
+				    <artifactId>tomcat-maven-plugin</artifactId>
+				    <version>1.1</version>
+				    <configuration>
+				    	<url>http://192.168.10.40:8080/manager/text</url>
+				    	<path>/mysite06</path>
+				    	<username>admin</username>
+				    	<password>manager</password>
+				    </configuration>
+				</plugin>	
 			</plugins>
 		</build>
 		
