--- a/mysite06/pom.xml
+++ b/mysite06/pom.xml
@@ -112,10 +112,8 @@
 				    <artifactId>tomcat-maven-plugin</artifactId>
 				    <version>1.1</version>
 				    <configuration>
-				    	<url>http://192.168.10.40:8080/manager/text</url>
-				    	<path>/mysite06</path>
-				    	<username>admin</username>
-				    	<password>manager</password>
+				    	<url>${tomcat.deploy.url}</url>
+							<server>tomcat-lx</server>
 				    </configuration>
 				</plugin>	
 			</plugins>
